codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_tall.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---













✦ Working                                                     0s · Esc interrupt

• 30 queued · ⌥ + ↑ edit latest queued
  Latest: Hello, world! 29
        · Hello, world! 28
        · Hello, world! 27
… 27 older queued · ⌥ + ↑ edit queue
╭─────────────────────────────────────────────────────────────────── tab queue ╮
┃ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
