codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_running.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 80))"
---
✦ Compacting context · Making room to continue.           <elapsed> · Esc interrupt

╭─────────────────────────────────────────────────────────────────── tab queue ╮
┃ ›                                                                            │
╰──────────────────────────────────────────────────────────────────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
