codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compaction_running_narrow.snap
---
source: tui/src/chatwidget/tests/compaction_tests.rs
expression: "normalize_compaction_snapshot(render_bottom_popup(&chat, 40))"
---
✦ Compacting context            Esc stop
  └ Making room to continue.

╭─────────────────────────── tab queue ╮
┃ ›                                    │
╰ ctrl + t transcript ─────────────────╯
  GPT 5.6 Sol · Default · /tmp/project
