codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__context_window_picker_two_windows.snap
---
source: tui/src/chatwidget/tests/context_window_picker.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select Context Window for gpt-5.6-sol

  1. Normal (default)  400,000 token context window
› 2. Maximum ✓         922,000 token context window

  enter confirm · esc back
